# HBFU-EduQuery

./: .gitignore  CHANGELOG.md  README.md
apps/miniapp/: .gitignore  App.vue  index.html  main.js  manifest.json  pages.json  theme.json  uni.promisify.adaptor.js  uni.scss
apps/miniapp/components/CustomNavBar/: CustomNavBar.vue
apps/miniapp/pages/course/: course.vue
apps/miniapp/pages/course/components/: CourseDetailPopup.vue  CourseHeader.vue  CourseTable.vue
apps/miniapp/pages/course/hooks/: useCourseTable.js  useWeek.js
apps/miniapp/pages/dekt/: dekt.vue
apps/miniapp/pages/elective/: elective.vue
apps/miniapp/pages/exam/: exam.vue
apps/miniapp/pages/index/: index.vue
apps/miniapp/pages/login/: login.vue
apps/miniapp/pages/plan/: plan.vue
apps/miniapp/pages/profile/: profile.vue
apps/miniapp/pages/score/: score.vue
apps/miniapp/subpkg/course/: course.vue
apps/miniapp/subpkg/dekt/: dekt.vue
apps/miniapp/subpkg/elective/: elective.vue
apps/miniapp/subpkg/exam/: exam.vue
apps/miniapp/subpkg/plan/: plan.vue
apps/miniapp/subpkg/score/: score.vue
apps/miniapp/utils/: api.js  configCache.js  imageCache.js  permission.js  request.js  share.js
apps/server/: Cargo.toml  data.json
apps/server/src/: main.rs
apps/server/src/api/: auth.rs  config.rs  course.rs  dekt.rs  elective.rs  exam.rs  image.rs  info.rs  mod.rs  plan.rs  score.rs  semester.rs  user.rs
apps/server/src/app/: error.rs  laytency.rs  mod.rs  response.rs  server.rs
apps/server/src/config/: mod.rs  server.rs
apps/server/src/jwxt/: error.rs  mod.rs  session.rs
(+71 files in other folders)
