[package]
name = "hbfu-server"
version = "0.1.0"
edition = "2024"
[profile.release]
opt-level = 2          # 降低优化级别（平衡性能和兼容性）
lto = false            # 关闭 LTO（跨平台编译必关，避免链接错误）
codegen-units = 1      # 单编译单元（保证编译产物完整性）
strip = false          # 不剥离符号（避免 ELF 文件损坏）

[dependencies]
axum = { version = "0.8.8", features = ["macros"] }
tokio = { version = "1.48.0", features = ["full"] }
tracing = { version = "0.1.44", features = ["async-await"] }
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "chrono"] }
serde = { version = "1.0.228", features = ["derive"] }
anyhow = "1.0.100"
thiserror = "2.0.17"
num_cpus = "1.17.0"
tower-http = { version = "0.6.8", features = [
    "trace",
    "timeout",
    "cors",
    "limit",
    "normalize-path",
    "auth",
] }
xid = "1.1.1"
bytesize = "2.3.1"
aes = "0.8.4"
base64 = "0.22.1"
regex = "1.12.2"
reqwest = { version = "0.12.28", default-features = false, features = ["cookies", "json", "rustls-tls"] }
reqwest_cookie_store = { version = "0.9.0", default-features = false, features = [
    "serde",
] }
scraper = "0.25.0"
rand = "0.9.2"
serde_json = "1.0"
